remove ugly conditional

--- a/force-app/main/default/classes/STO_CaseMilestoneHandler.cls
+++ b/force-app/main/default/classes/STO_CaseMilestoneHandler.cls
@@ -45,12 +45,12 @@ global without sharing class STO_CaseMilestoneHandler extends MyTriggers {
             Case casy = casesToHandle.containsKey(milestoneCase.CaseId)
                 ? casesToHandle.get(milestoneCase.CaseId)
                 : null;
-            if (casy != null && casy.Status == 'Forwarded') {
+
+            if (
                 // Do not close "Respond STO/BTO" Milestone as Case is not resolved yet when Status = "Forwarded"
-                milestoneCase.CompletionDate = milestoneCase.MilestoneType.Name == 'Respond STO' ||
-                    milestoneCase.MilestoneType.Name == 'Respond BTO'
-                    ? null
-                    : completionTime;
+                casy != null && casy.Status == 'Forwarded' && milestoneCase.MilestoneType.Name = HANDLING_TIME_TYPE_NAME
+            ) {
+                milestoneCase.CompletionDate = completionTime;
             } else {
                 if (!Test.isRunningTest())
                     milestoneCase.CompletionDate = completionTime;
